# tgzero

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  telegram.env.example
.github/workflows/: publish.yml
tgzero/: __init__.py  api.py  cli.py  cmd_ask.py  cmd_daemon.py  cmd_ping.py  cmd_run.py  cmd_send.py  cmd_tail.py  config.py  lock.py
